fix toggler display on mobile

--- a/Pricing Components/style.css
+++ b/Pricing Components/style.css
@@ -59,6 +59,7 @@ label p {
 
 .monthly {
     left: 1.2rem;
+    opacity: .8;
     position: absolute;
 }
 
@@ -76,7 +77,7 @@ label p {
     background: #fff;
     border-radius: 50px;
     box-shadow: 0 15px 9px -12px rgba(114, 126, 141, 0.829);
-    transition: all .8s ease;
+    transition: all .6s ease;
 
 }
 
@@ -143,8 +144,9 @@ input[type=checkbox]:checked+.toggler {
 }
 
 .btn {
-    border-radius: 6px;
     display: flex;
+    border-radius: 6px;
+    align-content: center;
     font-size: 1.13rem;
     padding: 18px 0;
     width: 100%;
@@ -167,6 +169,31 @@ input[type=checkbox]:checked+.toggler {
 
     header h2 {
         font-size: 1.9rem;
+    }
+
+    .left-content label {
+        width: 7.9rem;
+        padding: 17px 0;
+    }
+
+    label p {
+        font-size: .75rem;
+    }
+
+    .monthly {
+        left: .75rem;
+    }
+
+    .yearly {
+        right: 1.1rem;
+    }
+
+    .toggler {
+        padding: 16px 30px;
+    }
+
+    input[type=checkbox]:checked+.toggler {
+        transform: translateX(57px);
     }
 
     .pricing-cards {
@@ -218,7 +245,7 @@ input[type=checkbox]:checked+.toggler {
 
 @media (max-width: 420px) {
     header h2 {
-        font-size: 1.4rem;
+        font-size: 1.3rem;
     }
 
     main {
